--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -3,14 +3,43 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <meta name="description" content="" />
+    <title>BloomExpress Privacy Policy</title>
+    <meta
+      name="description"
+      content="Read the privacy policy of BloomExpress to understand how we protect your personal data and ensure compliance with GDPR and CCPA."
+    />
     <link rel="icon" href="assets/img/logo.png" type="image/x-icon" />
     <link rel="shortcut icon" href="assets/img/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
   <script defer src="public/script.js"></script></head>
   <body>
-    <header class="header"></header>
+    <header class="header">
+      <div class="container">
+        <nav class="nav">
+          <a href="index.html" class="logo">
+            <img class="logo-img" src="assets/svg/logo.svg" alt="Logo" />
+          </a>
+
+          <ul class="nav-menu header__nav-menu">
+            <li class="nav-menu__item">
+              <a class="nav-menu__link" href="prices.html">Prices</a>
+            </li>
+            <li class="nav-menu__item">
+              <a class="nav-menu__link" href="index.html#section-form">Order</a>
+            </li>
+            <li class="nav-menu__item">
+              <a class="nav-menu__link" href="prices.html#delivery">Delivery</a>
+            </li>
+            <li class="nav-menu__item">
+              <a class="nav-menu__link" href="prices.html#contacts">Contacts</a>
+            </li>
+          </ul>
+          <div class="burger">
+            <span class="burger-span"></span>
+          </div>
+        </nav>
+      </div>
+    </header>
     <main>
       <section class="section section-terms">
         <div class="container">
@@ -20,7 +49,7 @@
           <div class="subtitle"></div>
           <h3 class="section-terms__title">Compliance and Data Protection</h3>
           <p>
-            At [///comp name], we are committed to ensuring full compliance with
+            At BloomExpress, we are committed to ensuring full compliance with
             all applicable laws and regulations, including the General Data
             Protection Regulation (GDPR) and the California Consumer Privacy Act
             (CCPA). We prioritize the protection of your data and privacy,
@@ -44,12 +73,94 @@
           <p>
             As part of our commitment to compliance, we respect your rights to
             access, update, and delete your personal information. You can
-            request data modifications or removals by contacting us at [///comp
-            email].
+            request data modifications or removals by contacting us at
+            bloomexpress@gmail.com.
+          </p>
+          <h3 class="section-terms__title">Data Security</h3>
+          <p>
+            We implement robust security measures to protect your personal data
+            from unauthorized access, alteration, disclosure, or destruction.
+            Our security practices are regularly reviewed and updated to ensure
+            the highest level of protection.
+          </p>
+          <h3 class="section-terms__title">Third-Party Services</h3>
+          <p>
+            We may share your data with trusted third-party service providers
+            who assist us in operating our business, such as payment processors
+            and delivery services. These providers are obligated to protect your
+            information and use it only for the purposes for which it was
+            shared.
+          </p>
+          <h3 class="section-terms__title">Policy Updates</h3>
+          <p>
+            We may update this privacy policy from time to time to reflect
+            changes in our practices or legal requirements. We will notify you
+            of any significant changes by posting the updated policy on our
+            website.
           </p>
         </div>
       </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__item">
+          <a href="index.html" class="logo footer__logo">
+            <img class="logo-img" src="assets/svg/logo.svg" alt="Logo" />
+          </a>
+        </div>
+        <div class="footer__item">
+          <ul class="nav-menu footer__nav-menu">
+            <li class="nav-menu__item">
+              <a class="nav-menu__link" href="prices.html">Prices</a>
+            </li>
+            <li class="nav-menu__item">
+              <a class="nav-menu__link" href="index.html#section-form">Order</a>
+            </li>
+            <li class="nav-menu__item">
+              <a class="nav-menu__link" href="prices.html#delivery">Delivery</a>
+            </li>
+            <li class="nav-menu__item">
+              <a class="nav-menu__link" href="prices.html#contacts">Contacts</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__wrap footer__item">
+          <ul class="footer__links">
+            <li>
+              <a class="contact-link" href="mailto:bloomexpress@gmail.com">
+                <img
+                  src="assets/svg/envelope.svg"
+                  alt="envelope"
+                />bloomexpress@gmail.com</a
+              >
+            </li>
+            <li>
+              <a class="contact-link" href="tel:+916989963512"
+                ><img src="assets/svg/telephone.svg" alt="envelope" />+91
+                69899-63512</a
+              >
+            </li>
+            <li>
+              <a
+                class="contact-link"
+                href="https://maps.app.goo.gl/tLUMHgpDqcpcZeZP6"
+                target="_blank"
+                ><img src="assets/svg/geo.svg" alt="geo" />Kunwar Jagdish Marg,
+                Cantonment, Lucknow, Uttar Pradesh 226012, India</a
+              >
+            </li>
+          </ul>
+          <div class="footer__policy">
+            <a class="footer__bottom-link" href="privacy-policy.html"
+              >Privacy policy</a
+            >
+            <a class="footer__bottom-link" href="terms-conditions.html"
+              >Terms of Use</a
+            >
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="script.js"></script>
   </body>
 </html>
