--- a/src/terms-conditions.html
+++ b/src/terms-conditions.html
@@ -3,15 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <meta name="description" content="" />
+    <title>BloomExpress - Terms and Conditions</title>
+    <meta
+      name="description"
+      content="Read the terms and conditions for using BloomExpress services, including legal compliance, user responsibilities, dispute resolution, and more."
+    />
     <link rel="icon" href="assets/img/logo.png" type="image/x-icon" />
     <link rel="shortcut icon" href="assets/img/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <header class="header"></header>
+    <header class="header">
+      <div class="container">
+        <nav class="nav">
+          <a href="index.html" class="logo">
+            <img class="logo-img" src="assets/svg/logo.svg" alt="Logo" />
+          </a>
+
+          <ul class="nav-menu header__nav-menu">
+            <li class="nav-menu__item">
+              <a class="nav-menu__link" href="prices.html">Prices</a>
+            </li>
+            <li class="nav-menu__item">
+              <a class="nav-menu__link" href="index.html#section-form">Order</a>
+            </li>
+            <li class="nav-menu__item">
+              <a class="nav-menu__link" href="prices.html#delivery">Delivery</a>
+            </li>
+            <li class="nav-menu__item">
+              <a class="nav-menu__link" href="prices.html#contacts">Contacts</a>
+            </li>
+          </ul>
+          <div class="burger">
+            <span class="burger-span"></span>
+          </div>
+        </nav>
+      </div>
+    </header>
     <main>
       <section class="section section-terms">
         <div class="container">
@@ -24,9 +53,9 @@
           <p>
             By accessing and using our services, you agree to comply with all
             applicable laws and regulations, including data protection standards
-            and online safety protocols. [///////CompanyName] operates in
-            accordance with international compliance requirements to ensure a
-            safe and secure user experience.
+            and online safety protocols. BloomExpress operates in accordance
+            with international compliance requirements to ensure a safe and
+            secure user experience.
           </p>
           <h3 class="section-terms__title">User Responsibilities</h3>
           <p>
@@ -49,11 +78,111 @@
           <h3 class="section-terms__title">Contact Information</h3>
           <p>
             For questions or concerns related to our policies, please contact us
-            at [///////mail].
+            at bloomexpress@gmail.com.
+          </p>
+          <h3 class="section-terms__title">Intellectual Property</h3>
+          <p>
+            All content, trademarks, and data on this website, including but not
+            limited to software, databases, text, graphics, icons, and
+            hyperlinks, are the property of BloomExpress or its content
+            suppliers and are protected by international intellectual property
+            laws.
+          </p>
+
+          <h3 class="section-terms__title">Limitation of Liability</h3>
+          <p>
+            BloomExpress shall not be liable for any direct, indirect,
+            incidental, special, or consequential damages arising out of the use
+            or inability to use our services, even if we have been advised of
+            the possibility of such damages.
+          </p>
+
+          <h3 class="section-terms__title">Modification of Terms</h3>
+          <p>
+            BloomExpress reserves the right to modify these terms and conditions
+            at any time. Any changes will be effective immediately upon posting
+            on our website. Your continued use of our services constitutes
+            acceptance of the modified terms.
+          </p>
+
+          <h3 class="section-terms__title">Termination</h3>
+          <p>
+            We reserve the right to terminate or suspend your access to our
+            services at any time, without notice, for conduct that we believe
+            violates these terms or is harmful to other users of our services,
+            us, or third parties, or for any other reason.
+          </p>
+
+          <h3 class="section-terms__title">Severability</h3>
+          <p>
+            If any provision of these terms is found to be invalid or
+            unenforceable, the remaining provisions will continue to be valid
+            and enforceable to the fullest extent permitted by law.
           </p>
         </div>
       </section>
     </main>
-    <footer class="footer"></footer>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__item">
+          <a href="index.html" class="logo footer__logo">
+            <img class="logo-img" src="assets/svg/logo.svg" alt="Logo" />
+          </a>
+        </div>
+        <div class="footer__item">
+          <ul class="nav-menu footer__nav-menu">
+            <li class="nav-menu__item">
+              <a class="nav-menu__link" href="prices.html">Prices</a>
+            </li>
+            <li class="nav-menu__item">
+              <a class="nav-menu__link" href="index.html#section-form">Order</a>
+            </li>
+            <li class="nav-menu__item">
+              <a class="nav-menu__link" href="prices.html#delivery">Delivery</a>
+            </li>
+            <li class="nav-menu__item">
+              <a class="nav-menu__link" href="prices.html#contacts">Contacts</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__wrap footer__item">
+          <ul class="footer__links">
+            <li>
+              <a class="contact-link" href="mailto:bloomexpress@gmail.com">
+                <img
+                  src="assets/svg/envelope.svg"
+                  alt="envelope"
+                />bloomexpress@gmail.com</a
+              >
+            </li>
+            <li>
+              <a class="contact-link" href="tel:+916989963512"
+                ><img src="assets/svg/telephone.svg" alt="envelope" />+91
+                69899-63512</a
+              >
+            </li>
+            <li>
+              <a
+                class="contact-link"
+                href="https://maps.app.goo.gl/tLUMHgpDqcpcZeZP6"
+                target="_blank"
+                ><img src="assets/svg/geo.svg" alt="geo" />Kunwar Jagdish Marg,
+                Cantonment, Lucknow, Uttar Pradesh 226012, India</a
+              >
+            </li>
+          </ul>
+          <div class="footer__policy">
+            <a class="footer__bottom-link" href="privacy-policy.html"
+              >Privacy policy</a
+            >
+            <a class="footer__bottom-link" href="terms-conditions.html"
+              >Terms of Use</a
+            >
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="script.js"></script>
   </body>
 </html>
