--- a/public/thanks.html
+++ b/public/thanks.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <meta name="description" content="" />
+    <title>Thank You - BloomExpress</title>
+    <meta
+      name="description"
+      content="Thank you for your order from BloomExpress. We will contact you soon."
+    />
     <link rel="icon" href="assets/img/logo.png" type="image/x-icon" />
     <link rel="shortcut icon" href="assets/img/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
@@ -15,8 +18,15 @@
         <div class="container">
           <div class="title-wrap">
             <h1>Thank You!</h1>
+            <div class="section-thanks__contents">
+              <p>Thank you for your order. We will contact you soon.</p>
+              <div class="button-wrap">
+                <a href="index.html" class="button button-black"
+                  >Return to Home</a
+                >
+              </div>
+            </div>
           </div>
-          <div class="section-thanks__contents"></div>
         </div>
       </section>
     </main>
