--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-  <!-- lang="pt-BR" -->
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -284,21 +283,41 @@
           <div class="section-testimonials__wrap">
             <div class="section-testimonials__small-gallery">
               <div class="section-testimonials__img-wrap">
-                <img class="img-fill" src="assets/img/avatar-1.png" alt="" />
+                <img
+                  class="img-fill"
+                  src="assets/img/avatar-1.png"
+                  alt="Customer"
+                />
               </div>
               <div class="section-testimonials__img-wrap">
-                <img class="img-fill" src="assets/img/avatar-3.png" alt="" />
+                <img
+                  class="img-fill"
+                  src="assets/img/avatar-3.png"
+                  alt="Customer"
+                />
               </div>
               <div class="section-testimonials__img-wrap">
-                <img class="img-fill" src="assets/img/avatar-4.png" alt="" />
+                <img
+                  class="img-fill"
+                  src="assets/img/avatar-4.png"
+                  alt="Customer"
+                />
               </div>
               <div class="section-testimonials__img-wrap"></div>
               <div class="section-testimonials__img-wrap">
-                <img class="img-fill" src="assets/img/avatar-2.png" alt="" />
+                <img
+                  class="img-fill"
+                  src="assets/img/avatar-2.png"
+                  alt="Customer"
+                />
               </div>
               <div class="section-testimonials__img-wrap"></div>
               <div class="section-testimonials__img-wrap">
-                <img class="img-fill" src="assets/img/avatar-5.png" alt="" />
+                <img
+                  class="img-fill"
+                  src="assets/img/avatar-5.png"
+                  alt="Customer"
+                />
               </div>
               <div class="section-testimonials__img-wrap active">
                 <div class="empty-span text-primary fw-600 text-center">
@@ -306,7 +325,11 @@
                 </div>
               </div>
               <div class="section-testimonials__img-wrap">
-                <img class="img-fill" src="assets/img/avatar-6.png" alt="" />
+                <img
+                  class="img-fill"
+                  src="assets/img/avatar-6.png"
+                  alt="Customer"
+                />
               </div>
             </div>
             <div class="testimonials text-center">
