--- a/public/prices.html
+++ b/public/prices.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="assets/img/logo.png" type="image/x-icon" />
     <link rel="shortcut icon" href="assets/img/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
-  <script defer src="public/script.js"></script></head>
+  </head>
   <body>
     <header class="header">
       <div class="container">
@@ -53,7 +53,11 @@
           <div class="section-prices__price-cards">
             <div class="price-card">
               <div class="price-card__img-wrap">
-                <img src="assets/img/product-3.png" alt="" class="img-fill" />
+                <img
+                  src="assets/img/product-3.png"
+                  alt="Fancy bouquet"
+                  class="img-fill"
+                />
                 <div class="price-card__order-btn-wrap">
                   <a
                     href="index.html#section-form"
@@ -71,7 +75,11 @@
             </div>
             <div class="price-card">
               <div class="price-card__img-wrap">
-                <img src="assets/img/product-1.png" alt="" class="img-fill" />
+                <img
+                  src="assets/img/product-1.png"
+                  alt="Fancy bouquet"
+                  class="img-fill"
+                />
                 <div class="price-card__order-btn-wrap">
                   <a
                     href="index.html#section-form"
@@ -89,7 +97,11 @@
             </div>
             <div class="price-card">
               <div class="price-card__img-wrap">
-                <img src="assets/img/product-2.png" alt="" class="img-fill" />
+                <img
+                  src="assets/img/product-2.png"
+                  alt="Fancy bouquet"
+                  class="img-fill"
+                />
                 <div class="price-card__order-btn-wrap">
                   <a
                     href="index.html#section-form"
@@ -107,7 +119,11 @@
             </div>
             <div class="price-card">
               <div class="price-card__img-wrap">
-                <img src="assets/img/product-4.png" alt="" class="img-fill" />
+                <img
+                  src="assets/img/product-4.png"
+                  alt="Fancy bouquet"
+                  class="img-fill"
+                />
                 <div class="price-card__order-btn-wrap">
                   <a
                     href="index.html#section-form"
