--- a/public/thanks.html
+++ b/public/thanks.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="assets/img/logo.png" type="image/x-icon" />
     <link rel="shortcut icon" href="assets/img/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
-  <script defer src="public/script.js"></script></head>
+  </head>
   <body>
     <main>
       <section class="section">
